src/style.css
@import url('https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap');

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: system-ui;
    line-height: 1.5;
    display: flex;
    flex-direction: column;
    min-height: 100svh;
}

#content {
    flex: 1;
    position: relative;
}

img {
    max-width: 100%;
    display: block;
    border-radius: 10px;
}

header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    background-color: #2d4938;
    color: white;
}

.header-content {
    max-width: 95ch;
    margin-inline: auto;
    padding: 0.5em 0;
    font-size: 1.25rem;
    display: flex;
    justify-content: space-around;
}

#logo {
    margin: 0;
    font-family: 'MedievalSharp', cursive;
    font-size: 1.3rem;
    font-weight: bold;

}

a {
    text-decoration: none;
    color: white;
}

nav>a {
    padding: 0 2rem;
}

.current-tab {
    background-color: white;
    color: black;
    padding: 1rem 2rem;
    border-radius: 30% 30% 0 0;
}

main {
    width: min(95ch, 100% - 4rem);
    margin-inline: auto;
    margin-top: 4.5rem;
}

.container {
    margin-top: 2em;
}

.hero {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    column-gap: 1em;
    align-items: center;
}

.hero-text {
    display: grid;
    align-content: center;
}

.hero-image {
    max-width: 360px;
}

h1 {
    margin-bottom: 0.5em;
}

.hero-text>p {
    margin: 0.5em 0;
}
/* 
button {
    width: 8rem;
    padding: 0.5rem 1rem;
    font-weight: bold;
}

.hero-text>button {
    margin-top: 3em;
    place-self: center;
} */

h2 {
    margin-bottom: 0.5em;
}

p {
    margin-bottom: 0.5em;
}
/* 
.reviews {
    display: grid;
}

.reviews>.cta {
    margin-top: 1em;
    place-self: center;
} */

.dishes {
    margin-top: 2em;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(32ch, 1fr));
    gap: 1em;
}

.dish {
    display: grid;
    place-items: center;
}

footer {
    background-color: #2d4938;
    color: white;
    padding: 0.5em 0;
}

footer>a>p {
    margin: 0;
}

footer>a {
    min-width: 10rem;
    display: flex;
    gap: 0.5rem;
    justify-content: center;
    align-items: center;
}

svg {
    max-width: 2rem;
    fill: white;
}

@media (max-width: 620px) {
    .hero {
        grid-template: repeat(2, max-content) / 1fr;
        justify-items: center;
        row-gap: 1em;
    }

    .header-content {
        flex-direction: column;
        align-items: center;
        padding: 0.25rem 0 0;
    }

    .current-tab {
        padding: 0.25rem 2rem 0.27rem;
        border-radius: 5px 5px 0 0;
    }
}

